# PredictorDJ

./: .gitignore  INSTRUCCIONES.md  README.md  backtest_detallado.csv  backtest_detallado_dax.csv  backtest_detallado_nq.csv  backtest_detallado_usdjpy.csv  backtest_detallado_xauusd.csv  pyproject.toml  run_live_trading.py  run_predictor.py  run_predictor_dj.py  setup_mt5.py  trading_config.json  trading_config_mt5_dax.json  trading_config_mt5_dj.json  trading_config_mt5_nq.json  trading_config_mt5_usdjpy.json  trading_config_mt5_xauusd.json  trained_model.pkl  trained_model_dax.pkl  trained_model_nq.pkl  trained_model_usdjpy.pkl  trained_model_xauusd.pkl
src/predictor_dj/: broker_interface.py  live_trading.py  main.py
